jenkins.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-ingress-jenkins
  namespace: centerity
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  tls:
  - secretName: centerity
  rules:

  - host: jenkins.centerity.com
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
